Fix height on mobile

--- a/src/pages/Chat/Chat.scss
+++ b/src/pages/Chat/Chat.scss
@@ -7,6 +7,7 @@
         flex-direction: column;
         justify-content: space-between;
         height: calc(100vh - 80px);
+        height: calc(100dvh - 80px);
 
         .messages-container {
             display: flex;
