--- a/src/pages/Welcome/Welcome.scss
+++ b/src/pages/Welcome/Welcome.scss
@@ -5,6 +5,7 @@
     align-items: center;
     justify-content: center;
     height: 100vh;
+    height: 100dvh;
     gap: 40px;
     position: relative;
     padding: 5%;
